removed settings from admin dashboard

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       background-position: 0% 50%;
     }
   
-	.booknow {
+	booknow {
   background: linear-gradient(135deg, #ad1457, #6a1b9a);
   color: #fff;
   padding: 10px 20px;
@@ -115,19 +115,16 @@
   transition: all 0.3s ease-in-out;
 }
 
-.booknow:hover {
+booknow:hover {
   background: linear-gradient(135deg, #ec407a, #7b1fa2);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   transform: scale(1.05);
 
 }
 	  
-	  
-	  
-	  
-	  </style>
+</style>
     </head>
-  <body>
+<body>
   	
  
   </b><nav class="navbar navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" style = "color :black ;font-weight : bold; href="#" ><img  src="salonlogo.png" alt="Snip & Style Logo" width="140" height="140" style="margin-right: 60px;">
