--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			
 		.navi-button  {
 		
-  display: inline-block;
+  display: inline-blocK;
   color: white;
   background: linear-gradient(145deg, #444, #333);
   padding: 10px 20px;
